<resources>
    <string name="app_name">FieldEZ</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="login_as_different_user">Login as different user</string>
    <string name="app_usage_policy_will_be_as_per_fieldez_s_terms_of_services">App usage policy will be as per FieldEZ\'s Terms of Services</string>
    <string name="_169_2022_fieldez_all_rights_reserved_version_0_0_1">© 2022 FieldEZ All rights reserved Version 0.0.1</string>
    <string name="service">Service</string>
    <string name="add">Add</string>
    <string name="user">User</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="_22_june_09_14_58_pm">22-June-09 14:58 PM</string>
    <string name="workflow_service">Workflow : Service</string>
    <string name="fsemr260987">fsemr260987</string>
</resources>