<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_profile"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_round_person_24"
        android:title= "@string/user"/>

    <item
        android:id="@+id/menu_filter"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title= "@string/filter"/>

    <item
        android:id="@+id/menu_search"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title= "@string/search"/>

</menu>